# openprivacy

./: .gitignore  AGENTS.md  ANONYMIZATION.md  CHANGELOG.md  DEPLOIEMENT.md  GUIDE_DISTRIBUTION_FR.md  GUIDE_UTILISATEUR_FR.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS_FINALES.md  LICENSE_SETUP.md  PR_REVIEW_CHECKLIST.md  QUICKSTART_ANONYMIZATION.md  README.md  RELEASE_WINDOWS_SUMMARY.md  SECURITY.md  TECHNICAL_DESIGN_ANONYMIZATION.md  WINDOWS_RELEASE_GUIDE.md  pyproject.toml  vercel.json
.github/workflows/: pages.yml  release-windows.yml
desktop/: README.md  __init__.py  api.py  app_gui.py  docx_redact.py  license.py  test_docx_redact.py  ui_theme.py
desktop/web/: app.js  index.html  styles.css
examples/: README_ANONYMIZATION.md  demo_anonymization.py
opf/: __main__.py  _api.py
opf/_core/: anonymization_map.py
packaging/: openprivacy.spec  privacy-filter.spec
scripts/: build-guide-pdf.py  build-mac.sh  build-windows.ps1  publish-github-prive.sh  run-gui-dev.ps1  run-gui-dev.sh  sync-guide-pdf.sh
supabase/migrations/: 20260604_openprivacy_licenses.sql  20260605_openprivacy_rate_limits.sql  20260606_openprivacy_email_verify.sql
tests/: test_anonymization.py
website/: .env.example  GUIDE_UTILISATEUR_FR.md  README.md  SHADCN.md  SUPABASE_FIX.md  config.js  i18n.js  index.html  main.js  package.json  styles.css  vercel.json  versions.json
website/api/: _lib.js  health.js  register.js  validate.js  verify-email.js
website/i18n/: de.json  en.json  fr.json
