[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opf"
version = "0.1.0"
description = "Standalone local-only OPF PyTorch model and eval tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub",
  "numpy",
  "packaging",
  "torch",
  "safetensors",
  "tiktoken",
]

[project.optional-dependencies]
desktop = ["python-docx>=1.1.2", "pywebview>=5.0"]

[project.scripts]
opf = "opf.__main__:main"
openprivacy = "desktop.app_gui:main"

[tool.setuptools.packages.find]
include = ["opf*"]
